use genericity phase 1